--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "simplex-noise": "^4.0.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
